--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,15 @@ export("%>%")
 export(cor_phy)
 export(cor_tax)
 export(diff_proteo)
+export(group_tax)
 export(norm_dna)
 export(phylo_lipids)
+export(plot_a_group)
+export(plot_pie)
 export(remove_clades)
 export(rm_singletons)
+export(sum_tax)
 export(trim_taxa_samp)
 export(trim_taxa_sum)
+export(x)
 importFrom(magrittr,"%>%")
