--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,8 @@ Imports:
    cowplot,
    ggplotify,
    ggpubr,
-   gridExtra
+   gridExtra,
+   stringr
 Depends: R (>= 2.10)
 Remotes: 
    github::joey711/phyloseq,
