--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(plot_groups)
 export(plot_pie)
 export(remove_clades)
 export(rm_singletons)
+export(standardize_tax)
 export(sum_tax)
 export(trim_taxa_samp)
 export(trim_taxa_sum)
