--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,25 +17,27 @@ Suggests:
    BiocInstaller
 VignetteBuilder: knitr
 Imports: 
+   methods,
    devtools,
    rmarkdown,
    readr,
    readxl,
    magrittr,
-   dplyr,
-   phyloseq,
+   dplyr (>= 0.7.6),
+   phyloseq (>= 1.25.2),
    BiocManager,
    randomcoloR,
    tibble,
    tidyr,
-   ggplot2,
+   ggplot2 (>= 3.0.0),
    cowplot,
    ggplotify,
    ggpubr,
    gridExtra,
-   stringr
-Depends: 
-   R (>= 2.10)
+   stringr (>= 1.3.1),
+   stringi (>= 1.2.4)
+Depends:
+   R (>= 3.5.1)
 Remotes: 
    github::joey711/phyloseq,
    github::Bioconductor/BiocInstaller
