--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,13 +17,14 @@ Suggests:
    BiocInstaller
 VignetteBuilder: knitr
 Imports: 
+   methods,
    devtools,
    rmarkdown,
    readr,
    readxl,
    magrittr,
    dplyr,
-   phyloseq,
+   phyloseq (>= 1.25.2),
    BiocManager,
    randomcoloR,
    tibble,
@@ -33,9 +34,10 @@ Imports:
    ggplotify,
    ggpubr,
    gridExtra,
-   stringr
-Depends: 
-   R (>= 2.10)
+   stringr (>= 1.3.1),
+   stringi (>= 1.2.4)
+Depends:
+   R (>= 3.5.1)
 Remotes: 
    github::joey711/phyloseq,
    github::Bioconductor/BiocInstaller
